# T5-text-summarizer

./: README.md
text_summarization/: CHANGELOG.md  LICENSE  README.md  app.py  config.py  conftest.py  pytest.ini  requirements.txt  setup.cfg
text_summarization/docs/: Project_Documentation.md  System_Architecture.md  User_Guide.md
text_summarization/interface/: __init__.py  ui.py
text_summarization/models/: model_loader.py  summarizer.py
text_summarization/services/: __init__.py  summarization_service.py
text_summarization/tests/: __init__.py  test_summarization.py
text_summarization/utils/: __init__.py  helpers.py  logger.py  preprocessing.py
