[metadata]
name = t5-text-summarizer
version = 1.0.0
author = Gerges Emad
description = Abstractive text summarization with T5-small and Gradio
long_description = file: README.md
long_description_content_type = text/markdown
python_requires = >=3.10

[tool:pytest]
testpaths = tests
python_files = test_*.py
